--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@progress/kendo-react-pdf": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-simple-typewriter": "^5.0.1",
     "react-typewriter-effect": "^1.1.0"
   },
